# vb_robot_server

./: .gitignore  pyproject.toml  quest_2_ee_left_hand_fix_quest.npy  quest_2_ee_right_hand_fix_quest.npy  sync_to_gdrive.sh  test_kinematics.py
assets/0118_data_single_no_state/: norm_stats.json
assets/ARM-LEFT-GR-0/: CMakeLists.txt  package.xml
assets/ARM-LEFT-GR-0/config/: joint_names_ARM-LEFT-GR-0.yaml
assets/ARM-LEFT-GR-0/launch/: display.launch  gazebo.launch
assets/ARM-LEFT-GR-0/meshes/: left-link_arm_1.STL  left-link_arm_4.STL  left-link_arm_5.STL  left-link_arm_6.STL  left-link_arm_7.STL  left-link_arm_base.STL  left-link_gripper_base.STL  left-link_gripper_finger_1.STL  left-link_gripper_finger_2.STL
assets/ARM-LEFT-GR-0/urdf/: ARM-LEFT-GR-0.csv  ARM-LEFT-GR-0.urdf
assets/ARM-RIGHT-GR-0/: CMakeLists.txt  package.xml
assets/ARM-RIGHT-GR-0/config/: joint_names_ARM-RIGHT-GR-0.yaml
assets/ARM-RIGHT-GR-0/launch/: display.launch  gazebo.launch
assets/ARM-RIGHT-GR-0/meshes/: right-link_arm_1.STL  right-link_arm_3.STL  right-link_arm_4.STL  right-link_arm_5.STL  right-link_arm_7.STL  right-link_arm_base.STL  right-link_gripper_base.STL  right-link_gripper_finger_1.STL  right-link_gripper_finger_2.STL
assets/ARM-RIGHT-GR-0/urdf/: ARM-RIGHT-GR-0.csv  ARM-RIGHT-GR-0.urdf
assets/meshes/: finger_convex.glb  finger_convex02.glb  finger_convex05.glb  left-link_arm_1.glb  left-link_arm_5.STL  left-link_arm_5.glb  left-link_arm_6.STL  left-link_arm_6.glb  left-link_arm_7.STL  left-link_ee_ft_sensor.STL  link_gripper_base.glb  link_wheel_2_1.STL  link_wheel_3_1.STL  link_wheel_3_1.glb  link_wheel_4_1.STL  right-link_arm_1.glb  right-link_arm_3.glb  right-link_arm_5.STL  right-link_arm_6.STL  right-link_arm_6.glb  right-link_arm_7.glb  right-link_ee_ft_sensor.glb
assets/urdf/ARM-GR-0/: CMakeLists.txt  package.xml
assets/urdf/ARM-GR-0/config/: joint_names_ARM-GR-0.yaml
assets/urdf/ARM-GR-0/launch/: display.launch  gazebo.launch
assets/urdf/ARM-GR-0/meshes/: base_link.STL  left-link_arm_1.STL  left-link_arm_2.STL  left-link_arm_3.STL  left-link_arm_5.STL  left-link_arm_6.STL  left-link_arm_7.STL  left-link_gripper_base.STL  left-link_gripper_finger_1.STL  left-link_gripper_finger_2.STL  right-link_arm_1.STL  right-link_arm_2.STL  right-link_arm_6.STL  right-link_arm_base.STL  right-link_gripper_base.STL  right-link_gripper_finger_1.STL  right-link_gripper_finger_2.STL
assets/urdf/ARM-GR-0/urdf/: ARM-GR-0.csv  ARM-GR-0.urdf
assets/whl/: hblog-0.1.0-cp38-abi3-manylinux_2_34_x86_64.whl
client/: robot_client.py
deploy_scripts/: bimanual_vb_TE_online.py  bimanual_vb_online.py
real_world/: bimanual_umi_env.py  multi_uvc_camera.py  real_inference_util.py  uvc_camera.py  video_recorder.py
real_world/robot_api/: cartesian_jog.py  config.bash  joint_jog_pybullet.py  joint_jog_pykin.py
real_world/robot_api/arm/: Controller.py  RobotControl_pybullet.py  RobotControl_pykin.py  RobotWrapper.py  RobotWrapper_typhon.py  pykin_test.py
real_world/robot_api/assets/: AM2_left.urdf  AM2_right.urdf  arm.urdf  arm_left.urdf  arm_right.urdf  beta1.0_v2_20251011.urdf
real_world/robot_api/assets/meshes/: finger_convex03.glb  finger_convex04.glb  finger_convex_v2.glb  left-link_arm_2.glb  left-link_arm_3.STL  left-link_arm_3.glb  left-link_arm_4.STL  left-link_arm_4.glb  left-link_arm_7.STL  left-link_arm_7.glb  left-link_arm_base.glb  left-link_ee_camera.glb  left-link_ee_ft_sensor.glb  link_gripper_base.STL  link_gripper_finger.STL  link_gripper_finger.glb  link_head_camera.glb  link_wheel_1_1.STL  link_wheel_1_1.glb  link_wheel_2_1.glb  link_wheel_4_1.glb  right-link_arm_1.STL  right-link_arm_3.STL  right-link_arm_4.STL  right-link_arm_4.glb  right-link_arm_7.STL  right-link_arm_base.STL  right-link_arm_base.glb
real_world/robot_api/sim/: PybulletEnv.py  check_quat.py  ik_fk_test.py
real_world/rokae/: rokae_interpolation_controller.py
scripts/: bimanual_vb.sh  bimanual_vb_TE.sh  compute_norm_stats.sh  joint_jog.sh  replay_data.sh  run_convert.sh  run_data_collection_pipeline.sh  test_single_inf.sh  train.sh
tools/cali_hand_eye/: get_quest_ee_pose.py  quest_2_ee_left_hand_fix_quest.npy  quest_2_ee_right_hand_fix_quest.npy
tools/cali_width_range/: cali_width.py  cam_b_photo_capture1213.py  get_width_from_photos.py
tools/check_hand_eye_mat/: check_hand_eye_mat.py  visualize_pose.py
tools/draw_action_plot/: draw_action_plot.py
tools/visualize_state_space/: visualize_deploy_result.py  visualize_state_space.py
utils/: camera_device.py  config_utils.py  cv_util.py  detect_aruco.py  pose_trajectory_interpolator.py  pose_util.py  precise_sleep.py  replay_buffer.py
utils/common/: normalize_util.py  pose_repr_util.py  replay_buffer.py  sampler.py
utils/shared_memory/: shared_memory_queue.py  shared_memory_ring_buffer.py  shared_ndarray.py
